--- a/crm/server/package.json
+++ b/crm/server/package.json
@@ -15,5 +15,8 @@
     "nodemon": "^3.1.7",
     "pg": "^8.13.1",
     "socket.io": "^4.8.1"
+  },
+  "resolutions": {
+    "postcss": "8.4.31"
   }
 }
