--- a/crm/docker-compose.yml
+++ b/crm/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     depends_on:
       - backend
     environment:
-      - REACT_APP_SOCKET_URL=http://localhost:5000
+      - REACT_APP_SOCKET_URL=http://backend:5001
     env_file:
       - ./client/.env.docker
 
@@ -17,9 +17,10 @@ services:
     build:
       context: ./server  # Node.js Dockerfile location
     ports:
-      - "5000:5000"
+      - "5001:5001"
     environment:
-      DATABASE_URL: postgres://postgres:postgres@postgres:5432/crm
+      - PORT=5001
+      - DATABASE_URL=postgres://postgres:postgres@postgres:5432/crm
     depends_on:
       - postgres
 
